Improved home page and added about page

--- a/home/index.html
+++ b/home/index.html
@@ -13,6 +13,15 @@
     <!-- Custom CSS  -->
     <link rel="stylesheet" href="css/home.css">
 
+    <!-- Information CSS -->
+    <link rel="stylesheet" href="../partials/css/information.css">
+    
+    <!-- NewsLetter CSS  -->
+    <link rel="stylesheet" href="../partials/css/newsletter.css">
+
+    <!-- Footer CSS  -->
+    <link rel="stylesheet" href="../partials/css/footer.css">
+
     <!-- Utilis CSS  -->
     <link rel="stylesheet" href="../utilities/utilis.css">
 
@@ -36,22 +45,22 @@
             <div class="collapse navbar-collapse justify-content-between" id="navbarSupportedContent">
                 <ul class="navbar-nav mb-2 mb-lg-0 font3 fs-5">
                     <li class="nav-item p-2">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
                     </li>
                     <li class="nav-item p-2">
-                        <a class="nav-link" href="#">About</a>
+                        <a class="nav-link" href="../about/about.html">About</a>
                     </li>
                     <li class="nav-item p-2">
-                        <a class="nav-link" href="#">Courses</a>
+                        <a class="nav-link" href="../courses/courses.html">Courses</a>
                     </li>
                     <li class="nav-item p-2">
-                        <a class="nav-link" href="#">Research</a>
+                        <a class="nav-link" href="../research/research.html">Research</a>
                     </li>
                     <li class="nav-item p-2">
-                        <a class="nav-link" href="#">News</a>
+                        <a class="nav-link" href="../news/news.html">News</a>
                     </li>
                     <li class="nav-item p-2">
-                        <a class="nav-link" href="#">Contact</a>
+                        <a class="nav-link" href="../contact/contact.html">Contact</a>
                     </li>
                 </ul>
                 <form class="d-flex" role="search">
@@ -125,15 +134,15 @@
         <div class="welcome container-fluid mt-5 text-center py-4">
 
             <!-- Content to be typed  -->
-            <div id="typingContent">
+            <div id="welcome-typingContent">
                 <p>Welcome To Adarsha Saula Yubak Higher Secondary School</p>
                 <p>Welcome To आदर्श सौलः युवक माध्यामिक विद्यालय</p>
                 <p>One of the best School located in Lalitpur,Nepal</p>
             </div>
 
             <!-- Content to be populated when typing -->
-            <h2 id="typingContainer">
-                <span id="typingArea" class="text-success"></span>
+            <h2 id="welcome-typingContainer">
+                <span id="welcome-typingArea" class="text-success"></span>
             </h2>
             <p class="w-75 m-auto text-black-50">Lorem ipsum dolor siitationem animi iusto. Veritatis dolor, dolore qui
                 accusamus delectus ad dolorem facilis.Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum,
@@ -308,7 +317,7 @@
 
 
         <!-- NewsLetter -->
-        <div class="container-fluid newsletter mt-5 pb-3">
+        <div class="container-fluid newsletter pb-3">
             <div class="container">
                 <div class="row align-items-center py-2">
                     <div class="col-lg-7 col-12 newsAndOffers">
@@ -357,6 +366,7 @@
                 </div>
             </div>
         </div>
+        <!-- main content ends here  -->
     </main>
 
 
@@ -377,12 +387,6 @@
         </div>
     </footer>
 
-
-
-
-
-
-
     <!-- Typed JS  -->
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
 
@@ -390,8 +394,7 @@
     <script src="javascript/home.js"></script>
 
     <!-- Bootstrap JavaScript  -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
         crossorigin="anonymous"></script>
 </body>
 
