Added login,signup and contact page

--- a/home/index.html
+++ b/home/index.html
@@ -70,8 +70,8 @@
                     </button>
                 </form>
                 <div class="d-flex login-signup-btn ms-2 mt-3 mt-lg-0">
-                    <button class="btn btn-danger">Login</button>
-                    <button class="btn ms-2 btn-danger">SignUp</button>
+                    <a href="../login/login.html"><button class="btn btn-danger">Login</button></a>
+                    <a href="../signup/signup.html"><button class="btn ms-2 btn-danger">SignUp</button></a>
                 </div>
             </div>
         </div>
