--- a/about/about.html
+++ b/about/about.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Adarsha Saula Yubak Secondary School</title>
-    <link rel="icon" type="image/png" href="././images/logo.png">
+    <link rel="icon" type="image/png" href="./images/logo.png">
 
 
     <!-- Bootstrap CSS  -->
@@ -34,7 +34,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #7f8fa6;">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">
-                <img src="././images/logo.png" alt="logo" class="img-fluid" width="60">
+                <img src="./images/logo.png" alt="logo" class="img-fluid" width="60">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -65,12 +65,12 @@
                 <form class="d-flex" role="search">
                     <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                     <button class="btn btn-outline-success p-0 rounded-circle" type="submit">
-                        <img src="././images/search.svg" alt="search" width="40">
+                        <img src="./images/search.svg" alt="search" width="40">
                     </button>
                 </form>
                 <div class="d-flex login-signup-btn ms-2 mt-3 mt-lg-0">
-                    <button class="btn btn-danger">Login</button>
-                    <button class="btn ms-2 btn-danger">SignUp</button>
+                    <a href="../login/login.html"><button class="btn btn-danger">Login</button></a>
+                    <a href="../signup/signup.html"><button class="btn ms-2 btn-danger">SignUp</button></a>
                 </div>
             </div>
         </div>
@@ -175,7 +175,8 @@
                                         Award For Best School 2018
                                     </button>
                                 </h2>
-                                <div id="collapseOne" class="accordion-collapse collapse show"
+
+                                <div id="collapseOne" class="accordion-collapse collapse"
                                     aria-labelledby="headingOne" data-bs-parent="#accordionExample">
                                     <div class="accordion-body">
                                         <strong>This is the first item's accordion body.</strong> It is shown by
