Added blog page and done some modification on website

--- a/home/index.html
+++ b/home/index.html
@@ -57,7 +57,7 @@
                         <a class="nav-link" href="../research/research.html">Research</a>
                     </li>
                     <li class="nav-item p-2">
-                        <a class="nav-link" href="../news/news.html">News</a>
+                        <a class="nav-link" href="../blog/blog.html">Blog</a>
                     </li>
                     <li class="nav-item p-2">
                         <a class="nav-link" href="../contact/contact.html">Contact</a>
