--- a/contact/contact.html
+++ b/contact/contact.html
@@ -56,7 +56,7 @@
                         <a class="nav-link" href="../research/research.html">Research</a>
                     </li>
                     <li class="nav-item p-2">
-                        <a class="nav-link" href="../news/news.html">News</a>
+                        <a class="nav-link" href="../blog/blog.html">Blog</a>
                     </li>
                     <li class="nav-item p-2">
                         <a class="nav-link active" href="./contact.html">Contact</a>
