--- a/contact/contact.html
+++ b/contact/contact.html
@@ -53,7 +53,7 @@
                         <a class="nav-link" href="../courses/courses.html">Courses</a>
                     </li>
                     <li class="nav-item p-2">
-                        <a class="nav-link" href="../research/research.html">Research</a>
+                        <a class="nav-link" href="../events/events.html">Events</a>
                     </li>
                     <li class="nav-item p-2">
                         <a class="nav-link" href="../blog/blog.html">Blog</a>
