--- a/home/index.html
+++ b/home/index.html
@@ -54,7 +54,7 @@
                         <a class="nav-link" href="../courses/courses.html">Courses</a>
                     </li>
                     <li class="nav-item p-2">
-                        <a class="nav-link" href="../research/research.html">Research</a>
+                        <a class="nav-link" href="../events/events.html">Events</a>
                     </li>
                     <li class="nav-item p-2">
                         <a class="nav-link" href="../blog/blog.html">Blog</a>
