Added search page

--- a/about/about.html
+++ b/about/about.html
@@ -62,7 +62,7 @@
                         <a class="nav-link" href="../contact/contact.html">Contact</a>
                     </li>
                 </ul>
-                <form class="d-flex" role="search">
+                <form action="../search/search.html" class="d-flex" role="search">
                     <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                     <button class="btn btn-outline-success p-0 rounded-circle" type="submit">
                         <img src="./images/search.svg" alt="search" width="40">
