Added course page and done some modification on website

--- a/courses/courses.html
+++ b/courses/courses.html
@@ -86,7 +86,7 @@
     <!-- main content starts here  -->
     <main>
 
-        <div class="container course">
+        <div class="container courses">
             <div class="row">
                 <!-- Courses Search Starts Here  -->
                 <div class="col-lg-8">
