--- a/home/index.html
+++ b/home/index.html
@@ -34,7 +34,7 @@
     <!-- Nav bar starts here  -->
     <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #7f8fa6;">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="./index.html">
                 <img src="./images/logo.png" alt="logo" class="img-fluid" width="60">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
